[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/nm/man.png" type="Texture" id=1]
[ext_resource path="res://assets/nm/Title.png" type="Texture" id=3]
[ext_resource path="res://assets/Main Menu/cloud3.png" type="Texture" id=4]
[ext_resource path="res://assets/levels menu/START BUTON UP.png" type="Texture" id=5]
[ext_resource path="res://assets/nm/woman.png" type="Texture" id=6]
[ext_resource path="res://assets/Main Menu/cloud1.png" type="Texture" id=7]
[ext_resource path="res://assets/Main Menu/cloud2.png" type="Texture" id=8]
[ext_resource path="res://assets/Main Menu/leaves.png" type="Texture" id=9]
[ext_resource path="res://assets/nm/background.png" type="Texture" id=10]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=11]
[ext_resource path="res://assets/levels menu/START BUTON DOWN.png" type="Texture" id=12]
[ext_resource path="res://assets/Main Menu/snow.png" type="Texture" id=13]

[sub_resource type="StreamTexture" id=1]
flags = 4

[node name="MainMenu" type="Node2D"]
script = ExtResource( 11 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="background"]
position = Vector2( 357, 774 )
texture = ExtResource( 10 )

[node name="snowParticles" type="CPUParticles2D" parent="background/Background"]
position = Vector2( -37, -843 )
scale = Vector2( 0.909517, 0.944066 )
amount = 50
lifetime = 15.0
randomness = 0.33
lifetime_randomness = 0.17
texture = ExtResource( 9 )
emission_shape = 2
emission_rect_extents = Vector2( 300, 1 )
gravity = Vector2( 0, 20 )
scale_amount = 0.04
hue_variation = 1.0
hue_variation_random = 0.06

[node name="Cloud1" type="Sprite" parent="background/Background"]
modulate = Color( 0.172549, 0.333333, 0.403922, 1 )
position = Vector2( -972, -580 )
scale = Vector2( 0.748771, 0.659674 )
texture = ExtResource( 7 )

[node name="Cloud3" type="Sprite" parent="background/Background/Cloud1"]
position = Vector2( -1335.52, 566.947 )
texture = ExtResource( 7 )

[node name="Cloud2" type="Sprite" parent="background/Background/Cloud1/Cloud3"]
position = Vector2( 909.491, -385.038 )
scale = Vector2( 0.896251, 1.25699 )
texture = ExtResource( 8 )

[node name="Cloud3" type="Sprite" parent="background/Background/Cloud1/Cloud3/Cloud2"]
position = Vector2( -411.273, 230.34 )
scale = Vector2( 0.48049, 0.752471 )
texture = ExtResource( 4 )

[node name="Cloud2" type="Sprite" parent="background/Background/Cloud1"]
position = Vector2( 600.985, 579.074 )
scale = Vector2( 0.896251, 1.25699 )
texture = ExtResource( 8 )

[node name="Cloud3" type="Sprite" parent="background/Background/Cloud1/Cloud2"]
position = Vector2( -1916.29, -265.314 )
scale = Vector2( 0.48049, 0.752471 )
texture = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="background/Background/Cloud1"]
position = Vector2( -331.209, 304.696 )
scale = Vector2( 126.708, 46.4623 )

[node name="Mum" type="Sprite" parent="background/Background"]
modulate = Color( 0.737255, 1, 0.980392, 1 )
position = Vector2( 145.395, -371.018 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="Dad" type="Sprite" parent="background/Background"]
modulate = Color( 0.737255, 1, 0.980392, 1 )
position = Vector2( -127.551, -359.864 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Title" type="Sprite" parent="background/Background"]
position = Vector2( 31, 24 )
texture = ExtResource( 3 )

[node name="FacebookUp" type="TextureButton" parent="background/Background"]
visible = false
margin_left = -325.0
margin_top = 584.0
margin_right = 188.0
margin_bottom = 801.0
texture_normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="TextureButton" parent="background/Background"]
modulate = Color( 0.909804, 0.929412, 1, 1 )
margin_left = -85.0
margin_top = 502.0
margin_right = 130.0
margin_bottom = 610.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smoke" type="CPUParticles2D" parent="."]
position = Vector2( 383, 1021 )
amount = 100
lifetime = 1.5
texture = ExtResource( 13 )
direction = Vector2( 0, -5 )
spread = 58.5
gravity = Vector2( 0, -98 )
initial_velocity = 253.97
color = Color( 0.341176, 0.980392, 0.847059, 0.0431373 )

[connection signal="screen_exited" from="background/Background/Cloud1/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="pressed" from="background/Background/start" to="." method="_on_start_pressed"]
